client/css/custom.less
/* ... */
.js-show-add-boards-simple {
	height: 168px !important;
    display: table-cell;
    font-weight: 400;
    vertical-align: middle;
    width: 25%;
}
.js-card-actions {
	.btn {
		text-align: left;
	}
}
.card-checklist {
	.checkbox {
		margin-top: 0px;
	}
	.js-show-item-edit-form {
		p {
			margin: 0 0 5px;
		}
	}
	label { 
		margin-top: 2px;
	}
	.form-group	 {
		margin-bottom: 10px;
	}
}
.instant-select{
	width: 100%;
    float: left;
    padding: 0px 0px 10px 0px;
}
//Js plugin
.bootstrap-growl{
	z-index: 99999 !important;
}
.js-label-background-list {
	.background-box {
		padding: 10px 0px;
		cursor: pointer;
		min-width: 48px;
		min-height: 48px;
		position: relative;
		i {
			color: #fff;
			font-size: 16px;
			padding: 0;
			top: 30%;
			text-align: center;
			cursor: pointer;
			bottom: auto;
			width: 100%;
			height: 100%;
			position: absolute;

		}
	}
}
.circle-blk{
	float:right;
}
.mauto{
	margin:0 auto;
}
.new-sample-border{
	.dashboard-btn {
		position: absolute;
		bottom: 3px;
		right: 3px;
		padding: 0px 15px;
	}
}
.user-table-width{
	width:200px;
}
.devices-td-new{
	min-width:100px;	
}
.js-user-settings-info {
	min-width:600px;
	max-width:600px;
}
.emoji-list {
	margin: 5px 0px 10px 0px;
	.radio-inline, .checkbox-inline {
    	padding: 0 15px 0px 0px;
	}
}
.activity-github-styles input[type=checkbox]{
	display:inline;
}
.activity-github-styles blockquote{
	font-size: 14px;
	color: #999;
}
ul.card_activitiesnew{
	li.activity-github-styles{
		padding-left: 25px;
		> .media{
			display: flex;
			overflow: visible;
			> .media-body{
				overflow: visible;
				flex:1 1 0;
			}
		}
	}
}

.attachddown{
	.dropdown-menu{
		bottom: 35px;
		top: auto;
		left: -15px;
		&:after{
			border-top: 6px solid #ffffff;
			border-bottom-color:transparent;
			bottom: -12px;
			top:auto;
		}
		&:before{
			border-top: 7px solid #ccc;
    		border-top-color: rgba(0, 0, 0, 0.15);
			border-bottom-color:transparent;
			bottom: -14px;
			top:auto;
		}
	}
}
.cardattachmentblk{
	padding: 0 0 0 45px;
}
.iaddcard{
	.form-group{
		margin-bottom: 8px;
	}
	.dockmodal-body{
		padding: 5px 15px 5px 15px;
	}
	li.duedate{
		.form-group{
			margin-bottom: 0;
		}
	}
}
.custom-filed-btn{
	width:83.4%;
}
.txt-aligns{
	.card-listing-truncate{
		small span{	
			overflow: hidden;
			text-overflow: ellipsis;
			white-space: nowrap;
			display: inline-block;
			max-width: 115px;
			line-height: 13px;
    		vertical-align: top;
		}
	}
}
.pad-left-22{
	padding-left: 24px;
}
.no-pad{
	padding:0 !important;
}
/*on jan12*/
header{
	.nav-pills {
		&.hdrpvtvws{
			padding:4px 0 0;
			& + div.dropdown{
				padding:4px 0 0;
			}
		}
	}
	.nav{
		>li{
			a.hdrorganization{
				padding:0 7px;
				line-height: 29px;
			}
			span.orgseperator{
				margin:0;
				line-height: 23px;
			}
		}
	}
	.headernav_rgtusr{
		>li{
			>a{
				padding:2px 7px;
				.label{
					font-weight: normal;
					font-size:11px;
				}
			}
		}
		.relatedusrs{
			padding:0 5px 0 0;
		}
	}
	.navbar-right{
		.dropdown-menu {
			a.ddownarrows{
				&:hover{
					[class*="icon"]{
						color:#000;
					}
				}
			}
		}
	}
}
.header_innr_a{
	.header-inner-alig{
		.open > a,  .open > a:hover,  .open >{
			background-color:none !important;
			border-color:none !important;
		} 
	}
}
.user-prf-new{
	display: inline-block;
    padding: 5px 0 0 5px;
}
 .embed-responsive.embed-responsive-16by9 {
    padding-bottom: 56.25%;
}
.embed-responsive {
    position: relative;
    display: block;
    height: 0;
    padding: 0;
    overflow: hidden;
}
.embed-responsive .embed-responsive-item, .embed-responsive iframe, .embed-responsive embed, .embed-responsive object {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: 0;
}
.non-select{
	-webkit-user-select:none;
	-moz-user-select:none;
	user-select:none;
}
.board-outer {
	align-items: inherit;
}
.board-list-outer {
	height: 100%;
}
.js-checklist-edit-form-textarea {
	height: 90px !important;
}
.js-list-response {
	display: none;
}
@media only screen and (max-width: 800px) {
    
    /* Force table to not be like tables anymore */
	#listview_table table, 
	#listview_table thead, 
	#listview_table tbody, 
	#listview_table th, 
	#listview_table td, 
	#listview_table tr { 
		display: block; 
	}
	.js-list-response {
		display: block;
	}
	/* Hide table headers (but not display: none;, for accessibility) */
	#listview_table thead tr { 
		position: absolute;
		top: -9999px;
		left: -9999px;
	}
 
	#listview_table tr { border: 1px solid #ccc; }
 
	#listview_table td { 
		/* Behave  like a "row" */
		border: none;
		border-bottom: 1px solid #eee; 
		position: relative;
		padding-left: 50%; 
		white-space: normal;
		text-align:left;
	}
 
	#listview_table td:before { 
		/* Now like a table header */
		position: absolute;
		/* Top/left values mimic padding */
		top: 6px;
		left: 6px;
		width: 45%; 
		padding-right: 10px; 
		white-space: nowrap;
		text-align:left;
		font-weight: bold;
	}
 
	/*
	Label the data
	*/
	#listview_table td:before { content: attr(data-title); }
}
.github-markdown a {
	color: #f47564;
	word-wrap: break-word;
	white-space: normal;
	&:hover, &:focus {
		color: #f14b34;
		text-decoration: underline;
	}
}
.card-color {
	font-size: 11px;
    line-height: 18px;
    color: white;
}
.no-whitespace ins,del,code{
	white-space: normal;
}
footer{
	.open > a {
		&,
		&:hover,
		&:focus {
		  border-color:#f47564 !important;
		}
	  }
}

